fix blockquote overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,7 @@ pre {
     padding: 0 !important;
     overflow: visible !important;
 }
+
+blockquote {
+    @apply truncate;
+}
